syntax = "proto3";
package Collplex.Models.Node;

/* 此类是本中心节点向子节点发送的请求 */
message RPCRequestOut {

	/* 子节点请求签名 */
	string signature = 1;

	/* 子节点响应时间戳 */
	int64 timestamp = 2;

	/* 子节点交互所用到的 json 数据 */
	string data = 3;
}
